Додано звіти |> Lab6 Done (PDF may be added later)